# cuda-matmul

./: .gitignore  CMakeLists.txt  run.sh
.devcontainer/: devcontainer.json
benchmarks/: results.md
include/: benchmark.cuh  kernels.cuh  matmul_cpu.h
src/: main.cu  matmul_cpu.cpp  matmul_naive.cu
src/kernels/: 1_naive.cu  3_blocked.cu  4_blockedv2.cu  5_vec4.cu  6_double_buffering.cu  7_pipelined.cu  tiled.cu
